eks-argocd/apps-poc/prod/internal-01/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: httpd-service
  namespace: foo
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: httpd
